--- a/alsa/Dockerfile
+++ b/alsa/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get install --no-install-recommends -y alsa-base
+RUN apt-get update && apt-get install -y alsa-base
 
 RUN mkdir /sounds
 
