commented testing in alsa

--- a/alsa/Dockerfile
+++ b/alsa/Dockerfile
@@ -2,6 +2,6 @@ FROM ubuntu:latest
 
 RUN apt-get update && apt-get install -y alsa-base
 
-RUN mkdir /sounds
-
-ENTRYPOINT ["aplay"]
+#uncomment for test to work
+#RUN mkdir /sounds
+#ENTRYPOINT ["aplay"]
