--- a/nvidia/Dockerfile
+++ b/nvidia/Dockerfile
@@ -1,5 +1,12 @@
-FROM nvidia/cuda:8.0-devel-ubuntu16.04
+# copied from https://gitlab.com/nvidia/cuda/blob/ubuntu16.04/8.0/runtime/Dockerfile
+# cuda removed
+# run using nvidia-docker https://github.com/NVIDIA/nvidia-docker/
+#FROM ubuntu:16.04
+FROM achernetzov/alsa
 
-RUN apt-get update && apt-get install -y mesa-utils sudo
+LABEL com.nvidia.volumes.needed="nvidia_driver"
 
-CMD ["/bin/bash"]
+RUN echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
+    echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf
+
+ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64
