--- a/winetricks/Dockerfile
+++ b/winetricks/Dockerfile
@@ -1,8 +1,8 @@
 FROM achernetzov/wine
 
-RUN wget https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
-&& chmod +x winetricks \
-&& mv ./winetricks /usr/local/bin/winetricks
+RUN sudo wget https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
+&& sudo chmod +x winetricks \
+&& sudo mv ./winetricks /usr/local/bin/winetricks
 
 #RUN winetricks vcrun2015
 
