--- a/winetricks/Dockerfile
+++ b/winetricks/Dockerfile
@@ -9,4 +9,7 @@ RUN sudo wget https://raw.githubusercontent.com/Winetricks/winetricks/master/src
 # for winetricks gui
 #RUN apt-get install -y zenity && cabextract
 
+#init win32 prefix using
+#WINEPREFIX="$HOME/prefix32" WINEARCH=win32 wine wineboot
+
 
