--- a/winetricks/Dockerfile
+++ b/winetricks/Dockerfile
@@ -4,12 +4,10 @@ RUN sudo wget https://raw.githubusercontent.com/Winetricks/winetricks/master/src
 && sudo chmod +x winetricks \
 && sudo mv ./winetricks /usr/local/bin/winetricks
 
-#RUN winetricks vcrun2015
-
-# for winetricks gui
-#RUN apt-get install -y zenity && cabextract
-
 #init win32 prefix using
 #WINEPREFIX="$HOME/prefix32" WINEARCH=win32 wine wineboot
+
+#run winetricks for prefix:
+#WINEPREFIX="$HOME/prefix32" WINEARCH=win32 winetricks --help
 
 
