--- a/winetricks/Dockerfile
+++ b/winetricks/Dockerfile
@@ -1,8 +1,10 @@
-FROM achernetzov/wine
+FROM achernetsov/wine
 
 RUN sudo wget https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
 && sudo chmod +x winetricks \
 && sudo mv ./winetricks /usr/local/bin/winetricks
+
+RUN sudo apt-get install -y cabextract
 
 #init win32 prefix using
 #WINEPREFIX="$HOME/prefix32" WINEARCH=win32 wine wineboot
@@ -10,7 +12,7 @@ RUN sudo wget https://raw.githubusercontent.com/Winetricks/winetricks/master/src
 #run winetricks for prefix:
 #WINEPREFIX="$HOME/prefix32" WINEARCH=win32 winetricks --help
 
-#run dome app:
-# WINEPREFIX="$HOME/prefix32" WINEARCH=win32 wine app.exe
+#run some app:
+#WINEPREFIX="$HOME/prefix32" WINEARCH=win32 wine app.exe
 
 
